--- a/src/app/validation/validation.component.html
+++ b/src/app/validation/validation.component.html
@@ -55,9 +55,10 @@
                     <mat-error *ngIf="form.errors?.['passwordMismatch'] && form.get('confirm_password')?.touched">Passwords do not match.</mat-error>
                 </mat-form-field>
             </div>
-            <div>
-                <button mat-raised-button color="accent" type="submit">Submit</button>
-            </div>                     
+            <div style="margin-top: 25px;">
+                <button mat-raised-button color="warn" type="submit" style="background-color: #FFD700; font-size: 20px;">Submit</button>
+            </div>
+                                
             <div *ngIf="registrationSuccess">
                 <p style="color: green; text-align: center;">Registration form filled successfully!</p>
             </div>
